--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,21 @@ dependencies {
     implementation "com.google.android.material:material:1.1.0-alpha07"
     implementation "androidx.viewpager2:viewpager2:1.0.0-alpha05"
 
+// https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit
+    implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.9.0'
+
+    //implementation "com.squareup.retrofit2:converter-gson:2.1.0"
+
+    // https://mvnrepository.com/artifact/com.squareup.retrofit2/converter-jackson
+    implementation group: 'com.squareup.retrofit2', name: 'converter-jackson', version: '2.9.0'
+
+
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
+
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.12.3'
+
+
+
+
 }
