--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
             android:allowBackup="true"
@@ -12,37 +13,40 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".HFPingActivity">
+        <activity android:name=".activity.WeatherStationActivity"
+            android:parentActivityName=".activity.MainActivity">
         </activity>
-        <activity android:name=".SearchActivity">
+        <activity android:name=".activity.HFPingActivity">
+        </activity>
+        <activity android:name=".activity.SearchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH"/>
             </intent-filter>
         </activity>
         <activity
-                android:name=".MediaViewActivity"
-                android:parentActivityName=".MainActivity">
+                android:name=".activity.MediaViewActivity"
+                android:parentActivityName=".activity.MainActivity">
         </activity>
         <activity
-                android:name=".AudioInternActivity"
-                android:parentActivityName=".MainActivity">
+                android:name=".activity.AudioInternActivity"
+                android:parentActivityName=".activity.MainActivity">
         </activity>
         <activity
-                android:name=".AudioExternActivity"
-                android:parentActivityName=".MainActivity">
+                android:name=".activity.AudioExternActivity"
+                android:parentActivityName=".activity.MainActivity">
             <meta-data
                     android:name="android.app.searchable"
                     android:resource="@xml/searchable"/>
         </activity>
         <activity
-                android:name=".VideoInternActivity"
-                android:parentActivityName=".MainActivity">
+                android:name=".activity.VideoInternActivity"
+                android:parentActivityName=".activity.MainActivity">
         </activity>
         <activity
-                android:name=".VideoExternActivity"
-                android:parentActivityName=".MainActivity">
+                android:name=".activity.VideoExternActivity"
+                android:parentActivityName=".activity.MainActivity">
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
